logs/action_mac_build_partial_ecc.log
2026-02-23 21:11:43,196 - ERROR - Compilation failed for ecc:
2026-02-23 21:11:43,196 - ERROR - /Users/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2/elligator2.c:88:36: error: unknown type name 'size_t'
   88 | static void wipe_buffer(void *buf, size_t size) {
      |                                    ^
1 error generated.
/Users/runner/work/NextSSL/NextSSL/src/primitives/ecc/ristretto255/ristretto255.c:2:10: warning: non-portable path to file '"../ed25519/fe.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
    2 | #include "../Ed25519/fe.h"
      |          ^~~~~~~~~~~~~~~~~
      |          "../ed25519/fe.h"
/Users/runner/work/NextSSL/NextSSL/src/primitives/ecc/ristretto255/ristretto255.c:3:10: warning: non-portable path to file '"../ed25519/ge.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
    3 | #include "../Ed25519/ge.h"
      |          ^~~~~~~~~~~~~~~~~
      |          "../ed25519/ge.h"
/Users/runner/work/NextSSL/NextSSL/src/primitives/ecc/ristretto255/ristretto255.c:4:10: warning: non-portable path to file '"../ed25519/sc.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
    4 | #include "../Ed25519/sc.h" // For scalar operations if needed, though mostly using fe/ge
      |          ^~~~~~~~~~~~~~~~~
      |          "../ed25519/sc.h"
3 warnings generated.

